--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.8",
+    "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
